<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negro">

    <ImageView
        android:id="@+id/imvw_foto_perfil"
        android:layout_width="86dp"
        android:layout_height="97dp"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/usuario" />

    <TextView
        android:id="@+id/txv_titulo_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_serif_toto_medium"
        android:text="@string/perfil_usuario"
        android:textAlignment="center"
        android:textColor="@color/blanco"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imvw_foto_perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txv_nombres_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/noto_serif_toto_medium"
        android:text="@string/nombre"
        android:textColor="@color/gris"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imvw_foto_perfil" />

    <TextView
        android:id="@+id/txv_apellidos_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_serif_toto_medium"
        android:text="@string/apellidos"
        android:textColor="@color/gris"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txv_correo_perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_nombres_perfil"
        app:layout_constraintVertical_bias="0.611" />

    <TextView
        android:id="@+id/txv_correo_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/noto_serif_toto_medium"
        android:text="@string/correo"
        android:textColor="@color/gris"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txv_telefono_perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txv_telefono_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_serif_toto_medium"
        android:text="@string/telefono"
        android:textColor="@color/gris"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535" />

    <Button
        android:id="@+id/btn_editar_perfil"
        android:layout_width="156dp"
        android:layout_height="48dp"
        android:layout_marginBottom="236dp"
        android:backgroundTint="@color/blanco"
        android:fontFamily="@font/noto_serif_toto_medium"
        android:text="@string/editar"
        android:textAlignment="center"
        android:textColor="@color/naranja"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_telefono_perfil"
        app:layout_constraintVertical_bias="1.0"
        app:strokeColor="@color/naranja"
        app:strokeWidth="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>