<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negro">

    <ImageView
        android:id="@+id/imvw_logo_home"
        android:layout_width="265dp"
        android:layout_height="304dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/txvw_nombre_app"
        android:layout_width="296dp"
        android:layout_height="77dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/noto_serif_toto_medium"
        android:text="@string/app_name"
        android:textColor="@color/blanco"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imvw_logo_home"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txv_invitacion"
        android:layout_width="291dp"
        android:layout_height="72dp"
        android:layout_marginTop="32dp"
        android:text="@string/impulso"
        android:textColor="@color/blanco"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvw_nombre_app"
        app:layout_constraintVertical_bias="0.004" />

    <TextView
        android:id="@+id/txv_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/registro"
        android:textColor="@color/naranja"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_comienza"
        app:layout_constraintVertical_bias="0.75"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_comienza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blanco"
        android:text="@string/inicia"
        android:textAlignment="center"
        android:textColor="@color/negro"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803"
        app:strokeColor="@color/naranja"
        app:strokeWidth="4dp" />

</androidx.constraintlayout.widget.ConstraintLayout>